@@ -1,3 +1,5 @@
+Sep 23, 2024: libarchive 3.7.6 released
+
 Sep 13, 2024: libarchive 3.7.5 released
 
 Apr 26, 2024: libarchive 3.7.4 released
